--- a/app/src/main/res/layout/item_on_board.xml
+++ b/app/src/main/res/layout/item_on_board.xml
@@ -11,7 +11,8 @@
         android:src="@drawable/third_on_board"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="@dimen/margin25"/>
+        android:layout_margin="@dimen/margin25"
+        android:contentDescription="image" />
 
     <TextView
         android:id="@+id/tvTitle"
