--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="blue">#1F83FF</color>
-    <color name="white_gray">#DADADA</color>
+    <color name="white_gray">#F5F5F7</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
