--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="blue">#1F83FF</color>
     <color name="white_gray">#F5F5F7</color>
+    <color name="gray">#B7BBC7</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
