--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,5 +58,20 @@
         android:layout_marginTop="30dp"
         android:textStyle="bold"/>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/addBtn"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:backgroundTint="@color/blue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="@dimen/margin25"
+        android:layout_marginBottom="156dp"
+        app:cornerRadius="10dp"
+        android:text="@string/create_habit"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        android:drawableLeft="@drawable/add"
+        android:textAlignment="viewStart"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
