--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,6 +38,10 @@
         android:id="@+id/chooseFragment"
         android:name="com.abit8.habitrack.presentation.ui.useronboard.ChooseFragment"
         tools:layout="@layout/fragment_choose" />
+    <fragment
+        android:id="@+id/createHabit"
+        android:name="com.abit8.habitrack.presentation.ui.home.CreateHabit"
+        />
 
 
 </navigation>
